# supreme-app

./: .eslintrc.js  .eslintrc.json  .gitignore  LICENSE  components.d.ts  create_bin.js  eslint.config.js  geti18n.py  index.html  local.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: Release.yml
AndroidWebApp/: .gitignore  build.gradle  gradle.properties  gradlew  settings.gradle
AndroidWebApp/app/: build.gradle  google-services.json
AndroidWebApp/app/src/main/: AndroidManifest.xml
AndroidWebApp/app/src/main/java/com/app/webapp/: Config.kt  MyApplication.kt
AndroidWebApp/app/src/main/java/com/app/webapp/activities/: AboutUsActivity.kt  IntroActivity.kt  SplashActivity.kt  WebActivity.kt
AndroidWebApp/app/src/main/java/com/app/webapp/models/: IntroItemModel.kt
AndroidWebApp/app/src/main/res/drawable/: bg_gradient_menu_header.xml  bg_gradient_slide1.xml  bg_gradient_slide2.xml  bg_gradient_slide3.xml  bg_gradient_slide4.xml  bg_gradient_slide5.xml  bg_splash_gradient.xml  btn_round.xml  ic_baseline_exit_to_app_24.xml  ic_baseline_extension_24.xml  ic_baseline_groups_24.xml  ic_baseline_home_24.xml  ic_baseline_menu_24.xml  ic_baseline_notifications_none_24.xml  ic_baseline_share_24.xml  ic_baseline_shopping_cart_24.xml  ic_baseline_star_rate_24.xml  slider_header_gradient.xml
AndroidWebApp/app/src/main/res/layout/: activity_about_us.xml  activity_web.xml  slider_header.xml  splash_animation.xml  splash_full_screen_image.xml  splash_simpel.xml
AndroidWebApp/app/src/main/res/menu/: top_app_bar.xml
AndroidWebApp/app/src/main/res/raw/: no_internet.json  setting.json
AndroidWebApp/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
AndroidWebApp/app/src/main/res/values-fa-rIR/: strings.xml  themes.xml
AndroidWebApp/app/src/main/res/values-night/: colors.xml  themes.xml
AndroidWebApp/app/src/main/res/xml/: activity_main_scene.xml
AndroidWebApp/gradle/wrapper/: gradle-wrapper.properties
public/: loading.lottie  no_internet.lottie
src/: App.vue  main.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/resources/: app.apk
src-tauri/resources/ApkRenamer/keys/: GOOGLE_MAPS_ANDROID_API_KEY.txt
src-tauri/src/: main.rs
src-tauri/src/convert/: mod.rs  web2app.rs
src-tauri/temp/res/xml/: setting.xml
src/assets/: loading.json
src/components/: ListItemMaker.vue  VFrame.vue  VMenu.vue  VSteps.vue  VToolbar.vue  frame.vue  introPageItem.vue  steps.vue  toolbar.vue
src/components/Inputs/: VModal.vue  VSwitch.vue  checkboxItem.vue  colorPicker.vue  fileSelect.vue  modal.vue  radioList.vue  textInput.vue
src/components/frames/: introFrame.vue  spashScreenFrame.vue  webPageFrame.vue
src/components/steps/: appInfo.vue  appSetting.vue  compile.vue  compileApp.vue  introPage.vue  splashScreeenSetting.vue  webPageSetting.vue
src/locales/: en.json  fa.json
src/stores/: appSetting.ts  navigation.ts
src/utils/: i18n-validators.ts  save.ts  shiki.ts
(+1 files in other folders)
