[package]
name = "web2app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "protocol-asset", "dialog-open", "dialog-save", "shell-open" , "process-command-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flexi_logger = { version = "0.27.3", features = ["colors", "async"] }
log = "0.4.20"
anyhow = "1.0.75"
tokio = { version = "1.34.0", features = ["full"] }
futures-util = "0.3.30"
passwords = "3.1.16"
async-recursion = "1.0.5"
derive-new = "0.6.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
