[package]
name = "web2app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [ "protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.75"
tokio = { version = "1.34.0", features = ["full"] }
futures-util = "0.3.30"
passwords = "3.1.16"
async-recursion = "1.0.5"
derive-new = "0.6.0"
colors-transform = "0.2.11"
image = "0.24.9"
zip = "0.6.6"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-test = "0.2.4"
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-clipboard-manager = "2.1.0-beta.7"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
